tests/fail/stacked_borrows/buggy_split_at_mut.stderr
error: Undefined Behavior: trying to reborrow <TAG> for Unique permission at ALLOC[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/buggy_split_at_mut.rs:LL:CC
   |
LL |     let (a, b) = safe::split_at_mut(&mut array, 0);
   |          ^
   |          |
   |          trying to reborrow <TAG> for Unique permission at ALLOC[0x0], but that tag does not exist in the borrow stack for this location
   |          this error occurs as part of a reborrow at ALLOC[0x0..0x10]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the Stacked Borrows rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <TAG> was created by a retag at offsets [0x0..0x10]
  --> $DIR/buggy_split_at_mut.rs:LL:CC
   |
LL |                 from_raw_parts_mut(ptr, len - mid), // BUG: should be "mid" instead of "len - mid"
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: <TAG> was later invalidated at offsets [0x0..0x10]
  --> $DIR/buggy_split_at_mut.rs:LL:CC
   |
LL |                 from_raw_parts_mut(ptr.offset(mid as isize), len - mid),
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: inside `main` at $DIR/buggy_split_at_mut.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

